--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cupchain-demo",
   "version": "1.0.0",
   "type": "module",
+  "license": "EUPL-1.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
